# 1mrc

./: .gitignore  README.md  medium-article.md
Java-helidon/: pom.xml
Java-helidon/src/main/java/org/example/: Nima.java  Request.java
go-service/: README.md  go.mod  main.go  test_client.go
java-activej/: pom.xml  run.sh
java-activej/src/main/java/com/recnos/onemrc/: ActiveJServer.java
java-activej/src/main/resources/: logback.xml
java-helidon/: README.md
java-helidon/src/main/java/org/example/: Nima.java  StatsService.java  StatsSnapshot.java
java-netty/: .gitignore  README.md  increase-limits.sh  pom.xml  run-loadtest.sh  run-server.sh
java-netty/src/main/java/com/recnos/onemrc/: NettyServer.java
java-netty/src/main/resources/: logback.xml
java-netty/src/test/java/com/recnos/onemrc/: LoadTestClient.java
java-spring/: README.md  pom.xml
java-spring-webflux/: pom.xml
java-spring-webflux/src/main/resources/: application.properties
java-spring/src/main/resources/: application.yml
java-vertx/: .gitignore  README.md  pom.xml
java-vertx/src/main/resources/: logback.xml
loadtest/: .gitignore  1m-requests.js  README.md  run-test.sh  spike-test.js  stress-test.js
loadtest-go/: README.md  go.mod  main.go  run.sh
monitoring/: README.md  docker-compose.yml
monitoring/grafana/provisioning/dashboards/: 1mrc-dashboard.json  dashboard.yml
monitoring/prometheus/: prometheus.yml
python-service/: README.md  main.py  requirements.txt
rust-service/: Cargo.toml  README.md  load_test.py
rust-service/src/: main.rs
(+28 files in other folders)
