[package]
name = "onemrc-rust"
version = "0.1.0"
edition = "2021"
default-run = "onemrc-rust"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
reqwest = { version = "0.11", features = ["json"] }
surf = { version = "2.3.2", features = ["h1-client"] }
fastrand = "2.0"